@@ -2,6 +2,7 @@
 v4.0.0-git
 ----------
 
+[jan] Fix listing tasks from Kolab backends.
 [jan] Fix sending alarm e-mail messages.
 
 
